@@ -20,6 +20,7 @@
 #include "config.h"
 
 #include <stdlib.h>
+#include <locale.h>
 #include <glib.h>
 #include <glib/gi18n.h>
 
